adicionando animação menu de linguas

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             <i class="fa-solid fa-globe"></i>
             <p>English</p>
             <i class="fa-solid fa-caret-down open"></i>
-            <div id="languages-options" class="languages-options disappear">
-                <a href="index.html" id="english" class="english-en">English</a>
-                <a href="portuguese.html" id="portuguese" class="portuguese-en">Portuguese</a>
+            <div id="languages-options" class="languages-options">
+                <div id="languages-options-menu" class="languages-options-menu first-disappear">
+                    <a href="index.html" id="english" class="english-en">English</a>
+                    <a href="portuguese.html" id="portuguese" class="portuguese-en">Portuguese</a>
+                </div>
             </div>
         </div>
     </nav>
