--- a/portuguese.html
+++ b/portuguese.html
@@ -30,10 +30,13 @@
             <i class="fa-solid fa-globe"></i>
             <p>Português</p>
             <i class="fa-solid fa-caret-down"></i>
-            <div id="languages-options" class="languages-options disappear">
-                <a href="index.html" id="english" class="english-pt">Inglês</a>
-                <a href="portuguese.html" id="portuguese" class="portuguese-pt">Português</a>
+            <div id="languages-options" class="languages-options">
+                <div id="languages-options-menu" class="languages-options-menu first-disappear">
+                    <a href="index.html" id="english" class="english-pt">Inglês</a>
+                    <a href="portuguese.html" id="portuguese" class="portuguese-pt">Português</a>
+                </div>
             </div>
+            
         </div>
     </nav>
     <main>
